Added file nadling and integrated it into existing codebase. Added almost all tests.